--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -206,44 +206,65 @@ and the derived files           pxpic.pdf
         {MMMM....MMMM.MM....MM..MMMMM..MMMM.MM...MM.MMMM.......MMM}
       }^^A
   }
-\ExplSyntaxOn
-^^A contains code from https://tex.stackexchange.com/a/25753/117050
-\NewDocumentCommand \codeexample { O{\footnotesize} D(){\leavevmode} +v }
 \makeatother
 ^^A =<<
+
+\usepackage{enverb,expkv-def}
+\makeatletter
+\ekvdefinekeys{pxpic-example}
   {
-    \begin{minipage}[c]{.5\linewidth}
-      #1
-      \__pxpic_doc_obeyedline_scantokens:n
-        {
-          \string\begin{lstlisting}
-            #3
-          \string\end{lstlisting}
-        }
-    \end{minipage}
-    \begin{minipage}[c]{.45\linewidth}
-      #2
-      \__pxpic_doc_obeyedline_scantokens:n {#3}
-    \end{minipage}
+     store   precode  = \pxpic@example@precode
+    ,initial precode  = \footnotesize
+    ,store   prepic   = \pxpic@example@prepic
+    ,initial prepic   = \leavevmode
+    ,store   code-wd  = \pxpic@example@codewd
+    ,initial code-wd  = .5\linewidth
+    ,store   pic-wd   = \pxpic@example@picwd
+    ,initial pic-wd   = .5\linewidth
+    ,boolTF  clapped  = \pxpic@example@clapped
+    ,boolTF  noindent = \pxpic@example@noindent
+    ,initial noindent
+  }
+\newenvironment{example}
+  {%
+    \enverb{auto-ignore,more-ignore=0,key-set=pxpic-example}%
+  }
+  {%
+    \pxpic@example@noindent\noindent\leavevmode
+    \pxpic@example@clapped
+      {%
+        \centering
+        \clap
+          {%
+            \begin{minipage}[c]{\pxpic@example@codewd}%
+              \pxpic@example@precode
+              \enverbListing{lstlisting}{}%
+            \end{minipage}%
+          }%
+        \clap{\enverbExecute}%
+      }%
+      {%
+        \begin{minipage}[c]{\pxpic@example@codewd}%
+          \pxpic@example@precode
+          \enverbListing{lstlisting}{}%
+        \end{minipage}%
+        \begin{minipage}[c]{\pxpic@example@picwd}
+          \pxpic@example@prepic
+          \enverbExecute
+        \end{minipage}%
+      }%
     \par
   }
-\IfFormatAtLeastTF{2024-06-01}
+\makeatother
+
   {
-    \cs_new_protected:Npn \__pxpic_doc_obeyedline_scantokens:n
       {
-        \newlinechar=\endlinechar
         \group_begin:
-          \cs_set:Npx \obeyedline { \char_generate:nn { 13 } { 12 } }
-          \exp_args:NNe
         \group_end:
-        \scantokens
       }
   }
   {
-    \cs_new_protected:Npn \__pxpic_doc_obeyedline_scantokens:n
       {
-        \newlinechar=\endlinechar \scan_stop:
-        \exp_args:Ne \scantokens
       }
   }
 \ExplSyntaxOff
@@ -388,44 +409,41 @@ and the derived files           pxpic.pdf
 %   }
 %
 % We can draw a small cross rather easily:\par\nobreak
-% \noindent
-% \codeexample$
-% \pxpic
-%   {
-%     {.k}
-%     {kkk}
-%     {.k}
-%   }
-% $
+% \begin{example}
+%   \pxpic
+%     {
+%       {.k}
+%       {kkk}
+%       {.k}
+%     }
+% \end{example}
 %
 % A small multicoloured grid:\par\nobreak
-% \noindent
-% \codeexample$
-% \pxpic
-%   {
-%     {brgk}
-%     {kbrg}
-%     {gkbr}
-%     {rgkb}
-%   }
-% $
+% \begin{example}
+%   \pxpic
+%     {
+%       {brgk}
+%       {kbrg}
+%       {gkbr}
+%       {rgkb}
+%     }
+% \end{example}
 %
 % A heart (shamelessly copied example from \pixelart):\par\nobreak
-% \noindent
-% \codeexample$
-% \pxpic[lines=space]
-%   {
-%     ..rr.rr
-%     .rrrrrrr
-%     rrrrrrrrr
-%     rrrrrrrrr
-%     rrrrrrrrr
-%     .rrrrrrr
-%     ..rrrrr
-%     ...rrr
-%     ....r
-%   }
-% $
+% \begin{example}
+%   \pxpic[lines=space]
+%     {
+%       ..rr.rr
+%       .rrrrrrr
+%       rrrrrrrrr
+%       rrrrrrrrr
+%       rrrrrrrrr
+%       .rrrrrrr
+%       ..rrrrr
+%       ...rrr
+%       ....r
+%     }
+% \end{example}
 %
 % A parrot (shamelessly copied example from \pkg{PixelArtTikz}):\par\nobreak
 % \begingroup
@@ -458,102 +476,96 @@ and the derived files           pxpic.pdf
 % \end{filecontents*}
 % \end{lstlisting}
 % \endgroup
-% \noindent
-% \codeexample$
-% \pxpic
-%   [
-%     lines=csv,
-%     colours={2=brown,3=yellow},
-%     file,
-%     size=3pt
-%   ]
-%   {\jobname-parrot.csv}
-% $
+% \begin{example}
+%   \pxpic
+%     [
+%       lines=csv,
+%       colours={2=brown,3=yellow},
+%       file,
+%       size=3pt
+%     ]
+%     {\jobname-parrot.csv}
+% \end{example}
 %
 % Using |mode=rgb| to draw a short coloured line:\par\nobreak
-% \noindent
-% \codeexample$
-% \pxpic[mode=rgb]{{{1,0,1}{1,1,0}{0,1,1}}}
-% $
+% \begin{example}
+%   \pxpic[mode=rgb]{{{1,0,1}{1,1,0}{0,1,1}}}
+% \end{example}
 %
 % A multicoloured grid using skips and |mode=cmy|:\par\nobreak
-% \noindent
-% \codeexample$
-% \pxpic[mode=cmy]
-%   {
-%     {{1,0,1} {1,1,0} {0,1,1} {}     }
-%     {{}      {1,0,1} {1,1,0} {0,1,1}}
-%     {{0,1,1} {}      {1,0,1} {1,1,0}}
-%     {{1,1,0} {0,1,1} {}      {1,0,1}}
-%   }
-% $
+% \begin{example}
+%   \pxpic[mode=cmy]
+%     {
+%       {{1,0,1} {1,1,0} {0,1,1} {}     }
+%       {{}      {1,0,1} {1,1,0} {0,1,1}}
+%       {{0,1,1} {}      {1,0,1} {1,1,0}}
+%       {{1,1,0} {0,1,1} {}      {1,0,1}}
+%     }
+% \end{example}
 %
 % Showing the difference between a skipped and a white pixel:\par\nobreak
-% \noindent
-% \codeexample()$
-% \pxpicsetup{colours = {w=white}}
-% \colorbox{gray}{\pxpic{{bbb}{b.b}{bbb}}}
-% \colorbox{gray}{\pxpic{{bbb}{bwb}{bbb}}}
-% $
+% \begin{example}[prepic=]
+%   \pxpicsetup{colours = {w=white}}
+%   \colorbox{gray}{\pxpic{{bbb}{b.b}{bbb}}}
+%   \colorbox{gray}{\pxpic{{bbb}{bwb}{bbb}}}
+% \end{example}
 %
-% \enlargethispage{1.1\baselineskip}
 % A biggish example: Tux.\footnote{Source:
 % \url{https://www.reddit.com/r/linux/comments/hwpm9j/tux_pixel_art_v10/}} I
 % put two rows of pixels per code line to reduce the size a bit and the code is
 % displayed tinily.\par\nobreak
-% \noindent
-% \codeexample[\tiny]$
-% \pxpic
-%   [
-%      size    = 2.5pt
-%     ,colours = {:=orange,
-%                 '=black!10,
-%                 g=black!75,
-%                 O=orange!80!black}
-%   ]
-%   {
-%     {...........gggg}            {.........gggkkggg}
-%     {........ggkkkkkkkg}         {........gkkkkkkkkg}
-%     {........kkkkkkkkkk}         {.......gkk.kkkk.kkk}
-%     {.......gk.k.kk.k.kk}        {.......gk.k.kk.k.kk}
-%     {.......gkkkkkkkkkkk}        {.......gkkk::::kkkk}
-%     {.......gk::::::::kk}        {.......gk.:kkkk:kkk}
-%     {......gkk..::::'kkkk}       {......gkk....'''kkkk}
-%     {......gkk....''''kkk}       {.....gkk.....''''kkkk}
-%     {.....gk.......''''kkk}      {....gkk........'''kkkk}
-%     {....gkk........'''kkkk}     {....gk..........''kkkk}
-%     {...gkkg.........'''kkkk}    {...gkkkk........'''kkkk}
-%     {..OOOOkkk.......'''kOOOO}   {..O::::kkk......'''O:::O}
-%     {.O::::::kk.....'''::::::O}  {.O::::::kkk...''kk::::::O}
-%     {O:::::::kkk...'kkk:::::::O} {O:::::::kkk...'kkk:::::::O}
-%     {.O:::::::kkkkkkkk:::::::O}  {..OO:::::kkkkkkkk:::::OO}
-%     {....OO::O.kkkkkk.O::OO}     {......OOO........OOO}
-%   }
-% $
+% \begin{example}[precode=\tiny]
+%   \pxpic
+%     [
+%        size    = 2.5pt
+%       ,colours = {:=orange,
+%                   '=black!10,
+%                   g=black!75,
+%                   O=orange!80!black}
+%     ]
+%     {
+%       {...........gggg}            {.........gggkkggg}
+%       {........ggkkkkkkkg}         {........gkkkkkkkkg}
+%       {........kkkkkkkkkk}         {.......gkk.kkkk.kkk}
+%       {.......gk.k.kk.k.kk}        {.......gk.k.kk.k.kk}
+%       {.......gkkkkkkkkkkk}        {.......gkkk::::kkkk}
+%       {.......gk::::::::kk}        {.......gk.:kkkk:kkk}
+%       {......gkk..::::'kkkk}       {......gkk....'''kkkk}
+%       {......gkk....''''kkk}       {.....gkk.....''''kkkk}
+%       {.....gk.......''''kkk}      {....gkk........'''kkkk}
+%       {....gkk........'''kkkk}     {....gk..........''kkkk}
+%       {...gkkg.........'''kkkk}    {...gkkkk........'''kkkk}
+%       {..OOOOkkk.......'''kOOOO}   {..O::::kkk......'''O:::O}
+%       {.O::::::kk.....'''::::::O}  {.O::::::kkk...''kk::::::O}
+%       {O:::::::kkk...'kkk:::::::O} {O:::::::kkk...'kkk:::::::O}
+%       {.O:::::::kkkkkkkk:::::::O}  {..OO:::::kkkkkkkk:::::OO}
+%       {....OO::O.kkkkkk.O::OO}     {......OOO........OOO}
+%     }
+% \end{example}
 %
 % Just for Paulo, a duck. Also, showing that the colour definitions in |mode=px|
 % can be arbitrary tokens or multiple letters:\par\nobreak
 % \noindent
-% \codeexample[\tiny]$
-% \pxpic[colours = {oo=orange,
-%                   \ylw=yellow,
-%                   \blk=black},
-%        skip    = \skp]
-%   {
-%     {\skp\skp\skp\ylw\ylw\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\skp{oo}\ylw\blk\ylw\ylw\ylw}
-%     {{oo}{oo}{oo}\ylw\ylw\ylw\ylw\ylw}
-%     {\skp{oo}{oo}{oo}\ylw\ylw\ylw\skp\skp\skp\skp\skp\ylw}
-%     {\skp\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
-%     {\skp\ylw\ylw\skp\ylw\ylw\ylw\ylw\skp\ylw\ylw\ylw}
-%     {\skp\ylw\ylw\ylw\skp\skp\skp\skp\ylw\ylw\ylw}
-%     {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
-%     {\skp\skp\skp\skp\ylw\ylw\ylw\ylw\ylw}
-%   }
-% $
+% \begin{example}[precode=\tiny]
+%   \pxpic[colours = {oo=orange,
+%                     \ylw=yellow,
+%                     \blk=black},
+%          skip    = \skp]
+%     {
+%       {\skp\skp\skp\ylw\ylw\ylw\ylw}
+%       {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw}
+%       {\skp\skp{oo}\ylw\blk\ylw\ylw\ylw}
+%       {{oo}{oo}{oo}\ylw\ylw\ylw\ylw\ylw}
+%       {\skp{oo}{oo}{oo}\ylw\ylw\ylw\skp\skp\skp\skp\skp\ylw}
+%       {\skp\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
+%       {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
+%       {\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw\skp\ylw\ylw}
+%       {\skp\ylw\ylw\skp\ylw\ylw\ylw\ylw\skp\ylw\ylw\ylw}
+%       {\skp\ylw\ylw\ylw\skp\skp\skp\skp\ylw\ylw\ylw}
+%       {\skp\skp\ylw\ylw\ylw\ylw\ylw\ylw\ylw\ylw}
+%       {\skp\skp\skp\skp\ylw\ylw\ylw\ylw\ylw}
+%     }
+% \end{example}
 %
 % Another example might be the definition of \CS{pxpiclogo} in
 % \autoref{sec:implementation:pxpiclogo}.
@@ -823,7 +835,7 @@ and the derived files           pxpic.pdf
 %       }^^A
 %   }^^A
 % \noindent
-% \begin{minipage}[c]{.45\linewidth}^^A
+% \begin{minipage}[c]{.5\linewidth}^^A
 % \begin{lstlisting}
 % \pxpicsetup
 %   {
@@ -842,9 +854,9 @@ and the derived files           pxpic.pdf
 %     {kkkw}
 %   }
 % \end{lstlisting}
-% \end{minipage}
+% \end{minipage}^^A
 % \fontfamily{txtt}\selectfont
-% \begin{tabular}[c]{ccc}
+% \begin{tabular}[c]{@{}ccc@{}}
 %   \texttt{gap-hack=2pt} & \texttt{gap-hack=0pt} & \texttt{gap-hack=.2pt} \\
 %   \mypxpic{2pt} & \mypxpic{0pt} & \mypxpic{.2pt} \\
 % \end{tabular}
@@ -854,15 +866,14 @@ and the derived files           pxpic.pdf
 % It is possible to exploit the |gap-hack| option to draw a grid around your
 % pixels (at least for a rectangular picture). For this we simply set a coloured
 % background and use a negative |gap-hack| value:\par
-% \noindent
-% \codeexample$
-% \newcommand\gridpxpic[3][]
-%   {{\setlength\fboxsep{#2}\colorbox{black}{\pxpic[gap-hack=-\fboxsep,#1]{#3}}}}
-% \gridpxpic
-%   [colours={g=green,w=white},size=8pt]
-%   {1pt}
-%   {{gwgw}{wgwg}}%
-% $
+% \begin{example}[prepic=]
+%   \newcommand\gridpxpic[3][]
+%     {{\setlength\fboxsep{#2}\colorbox{black}{\pxpic[gap-hack=-\fboxsep,#1]{#3}}}}
+%   \gridpxpic
+%     [colours={g=green,w=white},size=8pt]
+%     {1pt}
+%     {{gwgw}{wgwg}}%
+% \end{example}
 %
 %
 % \end{documentation}^^A=<<
