--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -117,6 +117,10 @@ and the derived files           pxpic.pdf
 \DoNotIndex{\ekv@ifempty,\p@,\z@}
 \DoNotIndex{\unexpanded}
 \DoNotIndex{\vbox,\vrule,\vtop}
+\ExplSyntaxOn
+\DoNotIndex{\cs_new_protected:Npn,\exp_args:NNNo,\file_get:nnNTF}
+\DoNotIndex{\tl_trim_spaces_apply:nN,\l_tmpa_tl}
+\ExplSyntaxOff
 \makeatletter
 \@ifdefinable\gobbledocstriptag{\def\gobbledocstriptag#1>{}}
 \makeatother
