title page graphic

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -298,6 +298,30 @@ and the derived files           pxpic.pdf
 % \maketitle
 % \renewcommand*\thefootnote{\arabic{footnote}}
 %
+% \begin{example}[precode=\tiny\color{gray},clapped]
+%   \pxpic
+%     [
+%        colours=
+%         {R=red!40!black,r=red!65!black,#=red!20!black,G=green!50!black,g=green!65!black}
+%       ,skip=., lines=space, size=2pt, c
+%     ]
+%     {
+%       ......RRR.RR.RR            .....RrrrR#RR#RRR
+%       ...RRrrRRR#RrR#RrR         ..RrrRR##R#RrR#RrR
+%       ..RrR#####RrrR#RR          ..RrrR#RR#RrrR#RrR
+%       .R#RRR#R#RrrrR#RrR         .R#R###R#RrrrR#RrR
+%       .RR######RrrR#RRR          RrrRRRRR#RRR#R###R
+%       R#RrrrrrR###RrRRRrR        R#RRrrrrrR#RrrrrrrR
+%       .R##RRRRR#RrrrrrrR         .RRR#####R#RrrrRR
+%       ..RRRRRRRR#RrrRG           ....RrrrR.RrrrRG..GGGGGG
+%       .....RRR...RRR.G.GggggggG  ...............G.GGgggGG
+%       ........GGGG...GG..GGG     ......GGggggGG.GG
+%       .....GgggggggGGGG          .....GGGGgggG..GG
+%       .....G..GGGG..GG           ..............GG
+%       .............GGG
+%     }
+% \end{example}
+%
 % \begin{abstract}
 % \noindent\parfillskip=0pt
 % With \pxpicname\ you draw pictures pixel by pixel. It was inspired by a
