use pixel font for headings

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -261,17 +261,155 @@ and the derived files           pxpic.pdf
   }
 \makeatother
 
+^^A pxpicfont definition% >>=
+\ExplSyntaxOn
+^^A macros and variables >>=
+\int_const:Nn \c__pxpic_font_ht_int { 7 }
+\int_const:Nn \c__pxpic_font_wd_int { 13 }
+\msg_new:nnn { pxpic } { dropped-glyph } { Glyph~ #1~ not~ found. }
+\NewDocumentCommand \pxpicfont { O{} m }
   {
+    \tl_if_empty:nF {#2}
       {
         \group_begin:
+          \pxpicsetup
+            {
+               mode = px
+              ,lines = group
+              ,colours = {##=., |=.!60!white, ;=.!30!white, {,}=.!10!white }
+              ,skip = .
+              ,size = \fp_eval:n { 1.6ex / \c__pxpic_font_ht_int } pt
+              ,wd = .5\pxpicHT
+              ,gap-hack = -\pxpicHT/4
+              ,#1
+            }
+          \mode_leave_vertical:
+          \exp_args:Ne \BeginAccSupp{ActualText={ \text_purify:n {#2} }}
+          \text_map_function:nN {#2} \__pxpic_font_glyph:n
+          \EndAccSupp{}
         \group_end:
       }
   }
+\cs_new:Npn \__pxpic_font_glyph:n #1
   {
+    \tl_if_blank:nTF {#1}
+      { \hskip \c__pxpic_font_wd_int \pxpicWD }
       {
+        \cs_if_exist_use:cF
+          { __pxpic_font_ \tl_to_str:n {#1} _glyph: }
+          { \msg_warning:nnn { pxpic } { dropped-glyph } {#1} }
       }
   }
+
+\cs_new_protected:Npn \__pxpic_font_new:nn #1#2
+  {
+    \cs_new_protected:cpe
+      { __pxpic_font_ \tl_to_str:n {#1} _glyph: }
+      { \pxpic { \exp_not:n {#2} } }
+  }
+\cs_generate_variant:Nn \__pxpic_font_new:nn { o }
+\cs_new_protected:Npn \__pxpic_font_new_eq:nn #1#2
+  {
+    \cs_new_eq:cc
+      { __pxpic_font_ \tl_to_str:n {#1} _glyph: }
+      { __pxpic_font_ \tl_to_str:n {#2} _glyph: }
+  }
+\cs_generate_variant:Nn \__pxpic_font_new_eq:nn { o }
+\cs_new_protected:Npn \__pxpic_font_new_lowered:nnn #1#2#3
+  {
+    \cs_new_protected:cpe
+      { __pxpic_font_ \tl_to_str:n {#1} _glyph: }
+      { \lower#2\pxpicHT\pxpic { \exp_not:n {#3} } }
+  }
+^^A =<<
+^^A glyphs >>=
+\__pxpic_font_new:nn {A} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#######|;,}{,;|#|;,;|#|;,} {,;|#|;,;|#|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {B} { {,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|######|;,} }
+\__pxpic_font_new:nn {C} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {D} { {,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|######|;,} }
+\__pxpic_font_new:nn {E} { {,;|######|;,}{,;|#|;,}{,;|#|;,}{,;|####|;,}{,;|#|;,}{,;|#|;,}{,;|######|;,} }
+\__pxpic_font_new:nn {F} { {,;|######|;,}{,;|#|;,}{,;|#|;,}{,;|####|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new:nn {G} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,}{,;|#|;|###|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {H} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {I} { {,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new:nn {J} { {......,;|#|;,}{......,;|#|;,}{......,;|#|;,}{......,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {K} { {,;|#|;,;|#|;,}{,;|#|;;|#|;,}{,;|#|;|#|;,}{,;|####|;,}{,;|#|;|#|;,}{,;|#|;;|#|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {L} { {,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|######|;,} }
+\__pxpic_font_new:nn {M} { {,;|#|;,...,;|#|;,}{,;|##|;,.,;|##|;,}{,;|#|#|;,;|#|#|;,}{,;|#||#|;|#||#|;,}{,;|#|;|#|#|;|#|;,}{,;|#|;;|#|;;|#|;,}{,;|#|;,...,;|#|;,} }
+\__pxpic_font_new:nn {N} { {,;|#|;,;|#|;,}{,;|##|;;|#|;,}{,;|#|#|;|#|;,}{,;|#||#||#|;,}{,;|#|;|#|#|;,}{,;|#|;;|##|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {O} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {P} { {,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|######|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new_lowered:nnn {Q} 2 { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,}{....,;|#|;,}{.....,;|##|;,} }
+\__pxpic_font_new:nn {R} { {,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|######|;,}{,;|#|;;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {S} { {.,;|#####|;,}{,;|#|;,}{,;|#|;,}{.,;|####|;,}{.....,;|#|;,}{.....,;|#|;,}{,;|#####|;,} }
+\__pxpic_font_new:nn {T} { {,;|#######|;,}{...,;|#|;,}{...,;|#|;,}{...,;|#|;,}{...,;|#|;,}{...,;|#|;,}{...,;|#|;,} }
+\__pxpic_font_new:nn {U} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {V} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#|;|#|;,}{.,;|#|;|#|;,}{..,;|#|#|;,}{..,;|#|#|;,}{...,;|#|;,} }
+\__pxpic_font_new:nn {W} { {,;|#|;;|#|;;|#|;,}{,;|#|;;|#|;;|#|;,}{,;|#|;;|#|;;|#|;,}{,;|#|;;|#|;;|#|;,}{.,;|#||#|#||#|;,}{.,;|#||#|#||#|;,}{..,;|##|;|##|;,} }
+\__pxpic_font_new:nn {X} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#|;|#|;,}{..,;|###|;,}{.,;|#|;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,} }
+\__pxpic_font_new:nn {Y} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,}{...,;|#|;,}{...,;|#|;,}{...,;|#|;,} }
+\__pxpic_font_new:nn {Z} { {,;|#####|;,}{....,;|#|;,}{...,;|#|;,}{..,;|#|;,}{.,;|#|;,}{,;|#|;,}{,;|#####|;,} }
+
+\__pxpic_font_new:nn {a} { {.,;|####|;,}{.....,;|#|;,}{.,;|#####|;,}{,;|#|;;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {b} { {,;|#|;,}{,;|#|;,}{,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#####|;,} }
+\__pxpic_font_new:nn {c} { {.,;|####|;,}{,;|#|;;|#|;,}{,;|#|;,}{,;|#|;;|#|;,}{.,;|####|;,} }
+\__pxpic_font_new:nn {d} { {.....,;|#|;,}{.....,;|#|;,}{.,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {e} { {.,;|####|;,}{,;|#|;;|#|;,}{,;|######|;,}{,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new_lowered:nnn {f} 2 { {..,;|###|;,}{.,;|#|;|#|;,}{.,;|#|;,}{.,;|#|;,}{,;|#####|;,}{.,;|#|;,}{.,;|#|;,}{.,;|#|;,}{.,;|#|;,} }
+\__pxpic_font_new_lowered:nnn {g} 2 { {.,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#####|;,}{.....,;|#|;,}{.,;|####|;,} }
+\__pxpic_font_new:nn {h} { {,;|#|;,}{,;|#|;,}{,;|#|###|;,}{,;|##|;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,} }
+\__pxpic_font_new:nn {i} { {,;|#|;,}{}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new_lowered:nnn {j} 2 { {..,;|#|;,}{}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{.,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new:nn {k} { {,;|#|;,}{,;|#|;,}{,;|#||#|;,}{,;|#|#|;,}{,;|##|;,}{,;|#|#|;,}{,;|#||#|;,} }
+\__pxpic_font_new:nn {l} { {,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;|#|;,}{.,;|###|;,} }
+\__pxpic_font_new:nn {m} { {,;|###|##|;,}{,;|#||#||#|;,}{,;|#||#||#|;,}{,;|#||#||#|;,}{,;|#||#||#|;,} }
+\__pxpic_font_new:nn {n} { {,;|#|###|;,}{,;|##|;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,} }
+\__pxpic_font_new:nn {o} { {.,;|####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|####|;,} }
+\__pxpic_font_new_lowered:nnn {p} 2 { {,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#####|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new_lowered:nnn {q} 2 { {.,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#####|;,}{.....,;|#|;,}{.....,;|#|;,} }
+\__pxpic_font_new:nn {r} { {,;|#|##|;,}{,;|##|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,} }
+\__pxpic_font_new:nn {s} { {.,;|####|;,}{,;|#|;,}{.,;|####|;,}{.....,;|#|;,}{,;|#####|;,} }
+\__pxpic_font_new:nn {t} { {.,;|#|;,}{,;|####|;,}{.,;|#|;,}{.,;|#|;,}{.,;|#|;,}{.,;|#|;|#|;,}{..,;|###|;,} }
+\__pxpic_font_new:nn {u} { {,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {v} { {,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#||#|;,}{.,;|#||#|;,}{..,;|##|;,} }
+\__pxpic_font_new:nn {w} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#||#||#|;,}{,;|#|#|#|#|;,}{.,;|#|;|#|;,} }
+\__pxpic_font_new:nn {x} { {,;|#|;|#|;,}{.,;|#|#|;,}{..,;|#|;,}{.,;|#|#|;,}{,;|#|;|#|;,} }
+\__pxpic_font_new_lowered:nnn {y} 2 { {,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|#####|;,}{.....,;|#|;,}{.,;|####|;,} }
+\__pxpic_font_new:nn {z} { {,;|#####|;,}{...,;|#|;,}{..,;|#|;,}{.,;|#|;,}{,;|#####|;,} }
+
+\__pxpic_font_new:nn {0} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#||#||#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {1} { {..,;|#|;,}{.,;|##|;,}{,;|#|#|;,}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{,;|#####|;,} }
+\__pxpic_font_new:nn {2} { {.,;|#####|;,}{,;|#|;,;|#|;,}{.....,;|##|;,}{..,;|####|;,}{.,;|#|;,}{,;|#|;,}{,;|#######|;,} }
+\__pxpic_font_new:nn {3} { {.,;|#####|;,}{,;|#|;,;|#|;,}{......,;|#|;,}{...,;|###|;,}{......,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {4} { {,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|######|;,}{......,;|#|;,}{......,;|#|;,}{......,;|#|;,} }
+\__pxpic_font_new:nn {5} { {,;|#######|;,}{,;|#|;,}{,;|#|;,}{,;|######|;,}{......,;|#|;,}{......,;|#|;,}{,;|######|;,} }
+\__pxpic_font_new:nn {6} { {..,;|####|;,}{.,;|#|;,}{,;|#|;,}{,;|######|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {7} { {,;|#######|;,}{......,;|#|;,}{.....,;|#|;,}{....,;|#|;,}{...,;|#|;,}{..,;|#|;,}{.,;|#|;,} }
+\__pxpic_font_new:nn {8} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|#####|;,} }
+\__pxpic_font_new:nn {9} { {.,;|#####|;,}{,;|#|;,;|#|;,}{,;|#|;,;|#|;,}{.,;|######|;,}{......,;|#|;,}{......,;|#|;,}{.,;|#####|;,} }
+
+\__pxpic_font_new:nn {.} { {,;|#|;,} }
+^^A glyphs =<<
 \ExplSyntaxOff
+^^A % =<<
+
+\usepackage{titlesec}
+\ExpandArgs{c}\titleformat{section}
+  {\normalfont\Large\bfseries}
+  {\leavevmode\llap{\pxpicfont{\thesection}\kern12pt}}
+  {0pt}
+  {\pxpicfont}
+\ExpandArgs{c}\titleformat{subsection}
+  {\normalfont\large\bfseries}
+  {\leavevmode\llap{\pxpicfont{\thesubsection}\kern12pt}}
+  {0pt}
+  {\pxpicfont}
+\ExpandArgs{c}\titleformat{subsubsection}
+  {\normalfont\normalsize\bfseries}
+  {\leavevmode\llap{\pxpicfont{\thesubsubsection}\kern12pt}}
+  {0pt}
+  {\pxpicfont}
+
 \begin{document}
   \title
     {^^A
