better legible pixel font 'm'

--- a/pxpic.dtx
+++ b/pxpic.dtx
@@ -96,6 +96,7 @@ and the derived files           pxpic.pdf
 \newcommand*\CS{\cs[no-index]}
 \renewcommand*\thefootnote{\fnsymbol{footnote}}
 \hypersetup{linkcolor=red!80!black,urlcolor=purple!80!black}
+
 \DoNotIndex{\advance}
 \DoNotIndex{\baselineskip,\begingroup,\bgroup,\box}
 \DoNotIndex{\csname}
@@ -121,9 +122,11 @@ and the derived files           pxpic.pdf
 \DoNotIndex{\cs_new_protected:Npn,\exp_args:NNNo,\file_get:nnNTF}
 \DoNotIndex{\tl_trim_spaces_apply:nN,\l_tmpa_tl}
 \ExplSyntaxOff
+
 \makeatletter
 \@ifdefinable\gobbledocstriptag{\def\gobbledocstriptag#1>{}}
 \makeatother
+
 \newenvironment{options}[1][]
   {%
     \begin{description}
@@ -362,7 +365,7 @@ and the derived files           pxpic.pdf
 \__pxpic_font_new_lowered:nnn {j} 2 { {..,;|#|;,}{}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{..,;|#|;,}{.,;|#|;,}{,;|#|;,} }
 \__pxpic_font_new:nn {k} { {,;|#|;,}{,;|#|;,}{,;|#||#|;,}{,;|#|#|;,}{,;|##|;,}{,;|#|#|;,}{,;|#||#|;,} }
 \__pxpic_font_new:nn {l} { {,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;,}{,;|#|;|#|;,}{.,;|###|;,} }
-\__pxpic_font_new:nn {m} { {,;|###|##|;,}{,;|#||#||#|;,}{,;|#||#||#|;,}{,;|#||#||#|;,}{,;|#||#||#|;,} }
+\__pxpic_font_new:nn {m} { {,;|####|###|;,}{,;|#|;|#|;|#|;,}{,;|#|;|#|;|#|;,}{,;|#|;|#|;|#|;,}{,;|#|;|#|;|#|;,} }
 \__pxpic_font_new:nn {n} { {,;|#|###|;,}{,;|##|;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,} }
 \__pxpic_font_new:nn {o} { {.,;|####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{.,;|####|;,} }
 \__pxpic_font_new_lowered:nnn {p} 2 { {,;|#####|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#|;;|#|;,}{,;|#####|;,}{,;|#|;,}{,;|#|;,} }
